--- a/TenerifeDevAlexaSkill.csproj
+++ b/TenerifeDevAlexaSkill.csproj
@@ -258,6 +258,8 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\CollectionModelDescription.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
+    <None Include="Properties\PublishProfiles\tenerifedevv - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\tenerifedevv - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\tenerifedevv.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
