--- a/TenerifeDevAlexaSkill.csproj
+++ b/TenerifeDevAlexaSkill.csproj
@@ -272,6 +272,7 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="speechAssets\sampleUtterances.txt" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -287,6 +288,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="speechAssets\intentSchema.json" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
